# luna-giveaway

./: .env  Cargo.toml  compose.yml  dev.db  dev.db-journal  readme.md
.github/workflows/: rust.yml
prisma/: schema.prisma
prisma/migrations/20240822163347_hi/: migration.sql
prisma/migrations/20240827222916_test/: migration.sql
prisma/migrations/20240827230939_deb/: migration.sql
prisma/migrations/20240827231123_asdasdasdasdasdasd/: migration.sql
prisma/migrations/20240828082035_asd/: migration.sql
prisma/migrations/20240828091146_/: migration.sql
prisma/migrations/20240828124146_sdf/: migration.sql
prisma/migrations/20240831064436_test/: migration.sql
prisma/migrations/20240831065256_asd/: migration.sql
prisma/migrations/20240831065401_asd/: migration.sql
prisma/migrations/20240831070559_asd/: migration.sql
prisma/migrations/20240831113617_da/: migration.sql
prisma/migrations/20240902095535_asd/: migration.sql
prisma/migrations/20240904140939_asd/: migration.sql
prisma_client/: Cargo.toml
prisma_client/src/: db.rs  lib.rs
src/: config.rs  error.rs  giveaway_manager.rs  main.rs  prelude.rs  utils.rs
src/commands/: end.rs  list.rs  mod.rs  reroll.rs  start.rs
src/entities/: embed_settings.rs  giveaway.rs  guild.rs  mod.rs  user.rs
src/giveaway/: giveaway.rs  manager.rs  mod.rs  options.rs  task.rs
src/middlewares/: auth.rs  mod.rs  server.rs
src/routes/: discord.rs  guild.rs  mod.rs  public.rs  user.rs
src/structures/: session.rs
src/transformers/: mod.rs
