[package]
name = "rs-give"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["prisma-cli", "prisma_client"]


[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "ws"] }


[dependencies]
parse_duration = "2.1.1"
cron = "0.12.1"
futures = "0.3"
once_cell = "1"
[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]


[dependencies.poise]
version = "0.6.1"
features = ["cache"]