[package]
name = "rs-give"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["prisma-cli", "prisma_client"]


[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag ="0.6.11", default-features = false, features = [
    "postgresql",

] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "postgresql",

] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "ws"] }


[dependencies]
parse_duration = "2.1.1"
cron = "0.12.1"
futures = "0.3"
once_cell = "1"
rand = "0.8.5"
dashmap = { version = "6.0.1", features = ["rayon", "serde"] }
prisma-client-rust = { workspace = true }
prisma_client = { path = "./prisma_client" }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
lazy_static = "1.4.0"
jsonwebtoken = "9.2.0"
serde_with = { version = "3.6.0", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
log = "0.4.22"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]


[dependencies.poise]
version = "0.6.1"
features = ["cache"]
